# rendiff

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
interop/: Cargo.toml
interop/src/: lib.rs
rendiff/: CHANGELOG.md  Cargo.toml  README.md
rendiff/example-comparisons/: README.md
rendiff/src/: diff.rs  histogram.rs  image.rs  lib.rs  threshold.rs  visualize.rs
rendiff/tests/: diff-examples.rs
src/: diff.rs  histogram.rs  lib.rs  threshold.rs
