[package]
name = "rendiff-cli"
edition = "2021"
rust-version = { workspace = true }
repository = { workspace = true }
categories = ["command-line-utilities", "development-tools::testing"]
publish = false # for now, just a test/example tool

[[bin]]
name = "rendiff"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", default-features = false, features = ["derive", "help", "std", "usage", "wrap_help"] }
image = { workspace = true, default-features = true }
mutants = { workspace = true }
rendiff = { workspace = true }
