[package]
name = "rendiff"
version = "0.2.0"
edition = "2021"
rust-version = { workspace = true }
repository = { workspace = true }
description = "Image comparison (diffing) for computer graphics renderer test cases."
license = "MIT OR Apache-2.0"
categories = ["development-tools::testing", "game-development", "multimedia::images", "rendering"]

[dependencies]
embed-doc-image = { workspace = true }
imgref = { workspace = true, default-features = false }

[dev-dependencies]
# used to load images for tests
image = { workspace = true, default-features = false, features = ["png"] }
interop = { workspace = true }

