[package]
name = "rendiff"
version = "0.2.0"
edition = "2021"
rust-version = { workspace = true }
repository = { workspace = true }
description = "Image comparison (diffing) for computer graphics renderer test cases."
license = "MIT OR Apache-2.0"
categories = ["development-tools::testing", "game-development", "multimedia::images", "rendering"]

[dependencies]
image = { workspace = true, default-features = false }
embed-doc-image = { workspace = true }

[dev-dependencies]
image = { workspace = true, features = ["png"] }
